[gd_scene load_steps=11 format=3 uid="uid://jjxpbkym537m"]

[ext_resource type="Script" uid="uid://bt4hvlcblfybq" path="res://BrainVisualizer/UI/Windows/QuickConnectNeuron/WindowQuickConnectNeuron.gd" id="1_xsnx8"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="2_now4c"]
[ext_resource type="Texture2D" uid="uid://dtlt3xsdo5bwi" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_S.png" id="3_tq10i"]
[ext_resource type="Texture2D" uid="uid://b85tpdt5nc7bw" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_C.png" id="4_1wwy8"]
[ext_resource type="Texture2D" uid="uid://bkmehptmh3rhh" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_H.png" id="5_smclk"]
[ext_resource type="Texture2D" uid="uid://bpewdkwkgeov7" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/edit_D.png" id="6_5pfvd"]
[ext_resource type="Texture2D" uid="uid://cqx1n1ng3se1b" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Gear_S.png" id="7_dkp02"]
[ext_resource type="Texture2D" uid="uid://csxb37tdkcsv8" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Gear_C.png" id="8_w4h15"]
[ext_resource type="Texture2D" uid="uid://cbk7opfxlg3dd" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Gear_H.png" id="9_et2nk"]
[ext_resource type="Texture2D" uid="uid://db7xvu7xapqal" path="res://BrainVisualizer/UI/GenericResources/ButtonIcons/Gear_D.png" id="10_6622n"]

[node name="WindowQuickConnectNeuron" type="VBoxContainer"]
offset_right = 126.0
offset_bottom = 40.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_xsnx8")
window_spawn_location = Vector2i(400, 400)

[node name="TitleBar" parent="." instance=ExtResource("2_now4c")]
layout_mode = 2
title = "Quick Connect"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="source" type="PanelContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(512, 192)
layout_mode = 2

[node name="step1" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/source"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="WindowPanel/WindowMargin/WindowInternals/source/step1"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Source"

[node name="TextureButton" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/source/step1"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("3_tq10i")
texture_pressed = ExtResource("4_1wwy8")
texture_hover = ExtResource("5_smclk")
texture_disabled = ExtResource("6_5pfvd")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="WindowPanel/WindowMargin/WindowInternals/source/step1"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="destination" type="PanelContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(512, 192)
layout_mode = 2

[node name="step2" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/destination"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="WindowPanel/WindowMargin/WindowInternals/destination/step2"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Destination"

[node name="TextureButton" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/destination/step2"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"TextureButton_icon"
texture_normal = ExtResource("3_tq10i")
texture_pressed = ExtResource("4_1wwy8")
texture_hover = ExtResource("5_smclk")
texture_disabled = ExtResource("6_5pfvd")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="WindowPanel/WindowMargin/WindowInternals/destination/step2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="confirm" type="PanelContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(512, 192)
layout_mode = 2

[node name="step3" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals/confirm"]
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="WindowPanel/WindowMargin/WindowInternals/confirm/step3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Waiting..."

[node name="TextureButton" type="TextureButton" parent="WindowPanel/WindowMargin/WindowInternals/confirm/step3"]
custom_minimum_size = Vector2(54, 54)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_type_variation = &"TextureButton_icon"
disabled = true
texture_normal = ExtResource("7_dkp02")
texture_pressed = ExtResource("8_w4h15")
texture_hover = ExtResource("9_et2nk")
texture_disabled = ExtResource("10_6622n")
ignore_texture_size = true
stretch_mode = 0

[node name="Control" type="Control" parent="WindowPanel/WindowMargin/WindowInternals/confirm/step3"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="gap" type="Control" parent="WindowPanel/WindowMargin/WindowInternals"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="Establish" type="Button" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
theme_type_variation = &"Button_Tall"
disabled = true
text = "Establish the Connection"

[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/source/step1/TextureButton" to="." method="_start_edit_source_config"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/destination/step2/TextureButton" to="." method="_start_edit_destination_config"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/confirm/step3/TextureButton" to="." method="_mapping_establish_check_pressed"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/Establish" to="." method="_establish"]
